--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pretendard": "^1.3.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.9.3",
     "react-router-dom": "^7.9.3",
     "tailwindcss": "^4.1.14"
