--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "@tanstack/react-query": "^5.90.2",
     "lucide-react": "^0.544.0",
     "pretendard": "^1.3.9",
     "react": "^19.1.1",
