--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/CosmosX-NASA/cosmosx-frontend",
   "name": "cosmosx-frontend",
   "private": true,
   "version": "0.0.0",
